  Bugfix: Remove EOL characters from command line (#2458728)
  Bugfix: Merging one line diff to empty other side didn't work (#2456399)
  Bugfix: Location pane was empty for some files with diffs (#2459234)
  Bugfix: Line filter editing didn't update edit box when editing was
   canceled by ESC key (#2493935)
  Bugfix: Wrong number shown for difference when using line filters (#2493980)
  Translation updates:
  - Brazilian (#2461443, #2524796)
  - Chinese Traditional (#2540115)
  - Czech (r6201)
  - Dutch (#2481022, #2494378, #2499994)
  - Swedish (#2452467, #2465385, #2511043)

WinMerge 2.12.x (R2_12) branch created (r6202)

WinMerge 2.11.1.8 - 2008-12-19 (r6200)
  Allow reloading the file if it has been changed on the disk
    behind WinMerge (#2354125)
  Add option to show Open-dialog on WinMerge startup (#2327424)
  Add Git to Source Control filter and fix ignore file rules (#2329381)
  Add build identifier for 64-bit builds to About-dialog (r6142)
  Installer: Option to add WinMerge to system path (#2435175)
  Add Unicode version of heksedit (#2036603)
  Allow multiple file compare documents by default (#2445749)
  Bugfix: Move confirmation dialog sometimes had wrong paths (#2327565, #2309190)
  Bugfix: Use translated version of readme.txt for Chinese Simplified (#2391000)
  Bugfix: Installer didn't install readme.txt for all translations (#2396437)
  Bugfix: Could not give paths to commandline when started WinMerge
    from Cygwin prompt (#2427946)
  Bugfix: Infinite loop in heksedit's Replace-dialog (r6176)
  Translation updates:
  - Croatian (#2390558)
  - German (r6130)
  - Greek (#2379356)
  - Japanese (r6154)
  - Swedish (#2318778, #2374278)

WinMerge 2.11.1.7 - 2008-11-20 (r6112)
  Add shell context menu to folder compare context menu (#2189315)
  Update PCRE to version 7.8 (#2209911)
  Show missing lines in location pane for diffs having both different
    and missing lines (#2119235)
  Syntax highlighting for Verilog files (#2231145)